force-app/main/default/objects/ACY_Calendar__c/ACY_Calendar__c.object-meta.xml
<CustomObject>
    <label>ACY Calendar</label>
    <nameField>
        <displayFormat>ACY-{00000}</displayFormat>
        <label>ACY Calendar Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACY Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>