force-app/main/default/objects/ACY_Calendar__c/fields/Academic_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Academic_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Cohort</label>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>