force-app/main/default/objects/ACY_Calendar__c/fields/AcademicSession__c.field-meta.xml
<CustomField>
    <fullName>AcademicSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Session</label>
    <referenceTo>AcademicSession</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>