force-app/main/default/objects/ACY_Calendar__c/fields/AcademicYear__c.field-meta.xml
<CustomField>
    <fullName>AcademicYear__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>AcademicYear</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>