force-app/main/default/objects/ACY_Calendar__c/fields/Approval_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Status__c</fullName>
    <label>Approval Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>