force-app/main/default/objects/ACY_Calendar__c/fields/Ashalata_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Ashalata_Approved_Date__c</fullName>
    <label>FA HOD Approved Date</label>
    <type>DateTime</type>
</CustomField>