force-app/main/default/objects/ACY_Calendar__c/fields/Class_Of__c.field-meta.xml
<CustomField>
    <fullName>Class_Of__c</fullName>
    <label>Class Of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class Of 2022</fullName>
                <label>Class of 2022</label>
            </value>
            <value>
                <fullName>Class of 2021</fullName>
            </value>
            <value>
                <fullName>Class of 2020</fullName>
            </value>
            <value>
                <fullName>Class of 2019</fullName>
            </value>
            <value>
                <fullName>Class of 2018</fullName>
            </value>
            <value>
                <fullName>Class of 2017</fullName>
            </value>
            <value>
                <fullName>Class of 2016</fullName>
            </value>
            <value>
                <fullName>Class of 2015</fullName>
            </value>
            <value>
                <fullName>Class of 2014</fullName>
            </value>
            <value>
                <fullName>Class of 2013</fullName>
            </value>
            <value>
                <fullName>Class of 2012</fullName>
            </value>
            <value>
                <fullName>Class of 2011</fullName>
            </value>
            <value>
                <fullName>Class of 2010</fullName>
            </value>
            <value>
                <fullName>Class of 2009</fullName>
            </value>
            <value>
                <fullName>Class of 2008</fullName>
            </value>
            <value>
                <fullName>Class of 2007</fullName>
            </value>
            <value>
                <fullName>Class of 2006</fullName>
            </value>
            <value>
                <fullName>Class of 2005</fullName>
            </value>
            <value>
                <fullName>Class of 2004</fullName>
            </value>
            <value>
                <fullName>Class of 2003</fullName>
            </value>
            <value>
                <fullName>Class of 2002</fullName>
            </value>
            <value>
                <fullName>Class of 2001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>