force-app/main/default/objects/ACY_Calendar__c/fields/Cohort_f__c.field-meta.xml
<CustomField>
    <fullName>Cohort_f__c</fullName>
    <label>Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>