force-app/main/default/objects/ACY_Calendar__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>