force-app/main/default/objects/ACY_Calendar__c/fields/Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formula__c</fullName>
    <formula>DATEVALUE( CreatedDate + 0.5/24)</formula>
    <label>Created Date(Formula)</label>
    <type>Date</type>
</CustomField>