force-app/main/default/objects/ACY_Calendar__c/fields/End_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Term_Date__c</fullName>
    <label>End Term Date</label>
    <type>Date</type>
</CustomField>