force-app/main/default/objects/ACY_Calendar__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>