force-app/main/default/objects/ACY_Calendar__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Year</label>
    <referenceTo>Financial_Year__c</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>