force-app/main/default/objects/ACY_Calendar__c/fields/Financial_Year_f__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_f__c</fullName>
    <label>Financial Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>