force-app/main/default/objects/ACY_Calendar__c/fields/Graduation_Day__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Day__c</fullName>
    <label>Graduation Day</label>
    <type>Date</type>
</CustomField>