force-app/main/default/objects/ACY_Calendar__c/fields/Intake_f__c.field-meta.xml
<CustomField>
    <fullName>Intake_f__c</fullName>
    <label>Academic Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>