force-app/main/default/objects/ACY_Calendar__c/fields/Last_Modified_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Formula__c</fullName>
    <formula>DATEVALUE( LastModifiedDate + 0.5/24)</formula>
    <label>Last Modified Date(Formula)</label>
    <type>Date</type>
</CustomField>