force-app/main/default/objects/ACY_Calendar__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>