force-app/main/default/objects/ACY_Calendar__c/fields/Location_f__c.field-meta.xml
<CustomField>
    <fullName>Location_f__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>