force-app/main/default/objects/ACY_Calendar__c/fields/Mid_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Mid_Term_Date__c</fullName>
    <label>Mid Term Date</label>
    <type>Date</type>
</CustomField>