force-app/main/default/objects/ACY_Calendar__c/fields/Orientation_Day__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Day__c</fullName>
    <label>Orientation Day</label>
    <type>Date</type>
</CustomField>