force-app/main/default/objects/ACY_Calendar__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>ACY Calendar</relationshipLabel>
    <relationshipName>ACY_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>