force-app/main/default/objects/ACY_Calendar__c/fields/Program_f__c.field-meta.xml
<CustomField>
    <fullName>Program_f__c</fullName>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>