force-app/main/default/objects/ACY_Calendar__c/fields/Records_Unlock_Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Records_Unlock_Requestor_Email__c</fullName>
    <label>Records Unlock Requestor Email</label>
    <type>Email</type>
</CustomField>