force-app/main/default/objects/ACY_Calendar__c/fields/Records_Unlock_Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Records_Unlock_Requestor_Name__c</fullName>
    <label>Records Unlock Requestor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>