force-app/main/default/objects/ACY_Calendar__c/fields/Registration_Day__c.field-meta.xml
<CustomField>
    <fullName>Registration_Day__c</fullName>
    <label>Registration Day</label>
    <type>Date</type>
</CustomField>