force-app/main/default/objects/ACY_Calendar__c/fields/Send_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send For Approval</label>
    <type>Checkbox</type>
</CustomField>