force-app/main/default/objects/ACY_Calendar__c/fields/Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>