force-app/main/default/objects/ACY_Calendar__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni &amp; Events</fullName>
            </value>
            <value>
                <fullName>ASA Event</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>CAS L&amp;D</fullName>
            </value>
            <value>
                <fullName>End Term</fullName>
            </value>
            <value>
                <fullName>Grad</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>In Plane</fullName>
            </value>
            <value>
                <fullName>International immersion</fullName>
            </value>
            <value>
                <fullName>Mid Term</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Page View</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Seal Activity</fullName>
            </value>
            <value>
                <fullName>Work Shop</fullName>
            </value>
            <value>
                <fullName>In Class</fullName>
            </value>
            <value>
                <fullName>Online Exam</fullName>
            </value>
            <value>
                <fullName>ELP / PaEV Week</fullName>
            </value>
            <value>
                <fullName>On-campus Interviews</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Math Boot Camp</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>