force-app/main/default/objects/ACY_Calendar__c/fields/Teaching_Location__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teaching_Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>ACY Calendar (Teaching_Location)</relationshipLabel>
    <relationshipName>ACY_Calendar1</relationshipName>
    <type>Lookup</type>
</CustomField>