force-app/main/default/objects/ACY_Calendar__c/fields/Teaching_Location_f__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Location_f__c</fullName>
    <label>Teaching Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>