force-app/main/default/objects/ACY_Calendar__c/fields/Teaching_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Start_Date__c</fullName>
    <label>Teaching Date</label>
    <type>Date</type>
</CustomField>