force-app/main/default/objects/ACY_Calendar__c/fields/Term_f__c.field-meta.xml
<CustomField>
    <fullName>Term_f__c</fullName>
    <label>Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>