force-app/main/default/objects/ACY_Calendar__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sessions</fullName>
            </value>
            <value>
                <fullName>Examination</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>CAS Event</fullName>
                <isActive>false</isActive>
                <label>CAS Event</label>
            </value>
            <value>
                <fullName>CSO Session</fullName>
                <isActive>false</isActive>
                <label>CSO Session</label>
            </value>
            <value>
                <fullName>Class</fullName>
                <isActive>false</isActive>
                <label>Class</label>
            </value>
            <value>
                <fullName>End Term Exams</fullName>
                <isActive>false</isActive>
                <label>End Term Exams</label>
            </value>
            <value>
                <fullName>Holiday</fullName>
                <isActive>false</isActive>
                <label>Holiday</label>
            </value>
            <value>
                <fullName>L &amp; D Sessions</fullName>
                <isActive>false</isActive>
                <label>L &amp; D Sessions</label>
            </value>
            <value>
                <fullName>Mid Term Exams</fullName>
                <isActive>false</isActive>
                <label>Mid Term Exams</label>
            </value>
            <value>
                <fullName>Workshop</fullName>
                <isActive>false</isActive>
                <label>Workshop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>