force-app/main/default/objects/ACY_Calendar__c/fields/Week_name__c.field-meta.xml
<CustomField>
    <fullName>Week_name__c</fullName>
    <formula>CASE( WEEKDAY( Teaching_Start_Date__c ), 7, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3,
&quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week name</label>
    <type>Text</type>
</CustomField>