force-app/main/default/objects/ACY_Calendar__c/fields/Week_number__c.field-meta.xml
<CustomField>
    <fullName>Week_number__c</fullName>
    <label>Week number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>