force-app/main/default/objects/ACY_Calendar__c/listViews/Academic_Calendar.listView-meta.xml
<ListView>
    <fullName>Academic_Calendar</fullName>
    <columns>NAME</columns>
    <columns>AcademicYear__c</columns>
    <columns>AcademicSession__c</columns>
    <columns>Program__c</columns>
    <columns>Week_name__c</columns>
    <columns>Type__c</columns>
    <columns>Approval_Process_Status__c</columns>
    <columns>Location__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Term_Start_Date__c</columns>
    <columns>Teaching_Location__c</columns>
    <columns>Graduation_Day__c</columns>
    <columns>Ashalata_Approved_Date__c</columns>
    <columns>Course_Code__c</columns>
    <columns>Week_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Academic Calendar</label>
</ListView>